css/general.css
/* 
---HERE GOES THE DESIGN SYSTEM FOR THE WHOLE PROJECT---

--- 01 TYPOGRAPHY SYSTEM

- Font sizes (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98


- Font weights
Default: 400
Medium: 500
Semi-bold: 600
Bold: 700

- Line heights
Default: 1
Small: 1.05
Medium: 1.2
Paragraph default: 1.6
Large: 1.8

- Letter spacing
-0.5px
0.75px


--- 02 COLORS
Go to opencolor.com
Go to maketintsandshades.com
Go to coolors.co (contrast check)

- Primary: #e67e22
- Tints: 
#eb984e
#fdf2e9
#fae5d3
- Shades: 
#cf711f
#45260a
- Accents:
#ffd43b
- Grays: 
#888
#767676 - lightest gray allowed on #fff
#6F6E6E (lightest gray allowed on #fdf2e9)
#555
#333


--- 03 IMAGES

Go to unsplash.com for food / restaurant images
Go to uifaces.co for face / people images


--- 04 ICONS

--- 05 SHADOWS

box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);

--- 06 BORDER-RADIOUS
Default: 9px
Medium: 11px

--- 07 WHITESPACE

-- Spacing system (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */

/* ************************* */
/* GLOBAL STYLES */
/* ************************* */

* {
  box-sizing: border-box;
  margin: 0;
  margin: 0;
}

html {
  /*percentage of the users browser font-size settings*/
  font-size: 62.5%;
}

body {
  font-family: "Rubik", sans-serif;
  line-height: 1;
  font-weight: 400;
  color: #555;
}

ul {
  margin: 0;
  padding: 0;
}

/* ************************* */
/* GENERAL REUSABLE COMPONENTS */
/* ************************* */

.container {
  max-width: 120rem;
  margin: 0 auto;
  padding: 0 3.2rem;
}

.grid {
  display: grid;
  row-gap: 9.6rem;
  column-gap: 6.4rem;
  /* margin-bottom: 9.6rem; */
}

/* to make sure that the if the  grid is the last  element in some container, it will not have this extra padding */
/* .grid:last-child {
  margin-bottom: 0;
} */

/* here is even quicker way of achieving the same as above */
.grid:not(:last-child) {
  margin-bottom: 9.6rem;
}

.grid--2-cols {
  grid-template-columns: repeat(2, 1fr);
}

.grid--3-cols {
  grid-template-columns: repeat(3, 1fr);
}

.grid--4-cols {
  grid-template-columns: repeat(4, 1fr);
}
.grid--5-cols {
  grid-template-columns: repeat(5, 1fr);
}

.grid--center-v {
  align-items: center;
}

.heading-primary,
.heading-secondary,
.heading-tertiary {
  letter-spacing: -0.5px;
  color: #333;
  /* color: #45260a; */
  font-weight: 700;
}

.heading-primary {
  font-size: 5.2rem;
  line-height: 1.05;
  margin-bottom: 3.2rem;
}

.heading-secondary {
  font-size: 4.4rem;
  line-height: 1.2;
  margin-bottom: 9.6rem;
}

.heading-tertiary {
  font-size: 3rem;
  line-height: 1.2;
  margin-bottom: 3.2rem;
}
.subheading {
  display: block;
  font-size: 1.6rem;
  font-weight: 500;
  color: #cf711f;
  text-transform: uppercase;
  margin-bottom: 1.6rem;
  letter-spacing: 0.75px;
}

.btn,
.btn:link,
.btn:visited {
  display: inline-block;
  text-decoration: none;
  font-size: 2rem;
  font-weight: 600;
  padding: 1.6rem 3.2rem;
  border-radius: 9px;
  /* always put the transition on the original state of the button/link/element */
  transition: all 0.3s;
  /* below only necessary for the .btn */
  border: none;
  cursor: pointer;
  font-family: inherit;
}

.btn--full:link,
.btn--full:visited {
  background-color: #e67e22;
  color: #fff;
}
.btn--full:hover,
.btn--full:active {
  background-color: #cf711f;
}

.btn--outline:link,
.btn--outline:visited {
  background-color: #fff;
  color: #555;
}
.btn--outline:hover,
.btn--outline:active {
  background-color: #fdf2e9;
  /* trick to add border inside the button */
  box-shadow: inset 0 0 0 3px #fff;
}

.btn--form {
  background-color: #45260a;
  color: #fdf2e9;
  /* below to make sure it doesn't stretch vertically */
  align-self: flex-end;
  /* overritting padding */
  padding: 1.2rem;
}

.btn--form:hover {
  background-color: #fff;
  color: #555;
}

.link:link,
.link:visited {
  display: inline-block;
  color: #e67e22;
  text-decoration: none;
  /* currentColor is a great value as it saves on writing code. Especially if you change the color of the hover state... */
  border-bottom: 1px solid currentColor;
  padding-bottom: 2px;
  transition: all 0.3s;
}

.link:hover,
.link:active {
  color: #cf711f;
  /* the border will also change the color but lets take it off */
  border-bottom: 1px solid transparent;
}

.list {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
}

.list-item {
  font-size: 1.8rem;
  display: flex;
  align-items: center;
  gap: 1.6rem;
  line-height: 1.2;
}

.list-icon {
  width: 3rem;
  height: 3rem;
  color: #e67e22;
}

*:focus {
  outline: none;
  /* outline: 4px dotted #e67e22;
  outline-offset: 8px; */
  box-shadow: 0 0 0 0.8rem rgba(230, 126, 34, 0.5);
}

/* HELPER / SETTING CLASSES */

.margin-right-sm {
  margin-right: 1.6rem !important;
}

.margin-bottom-md {
  margin-bottom: 4.8rem !important;
}

.center-text {
  text-align: center;
}

strong {
  font-weight: 500;
}

